--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Repositório do projeto v2 do curso de testes automatizados com Cypress (intermdiário) da Escola TAT no Udemy",
   "main": "cypress.config.js",
   "scripts": {
-    "test": "cypress run",
-    "teste-screen": "cypress open"
+    "testHeadless": "cypress run",
+    "testApp": "cypress open"
   },
   "repository": {
     "type": "git",
